[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "hello-cpp"
version = "0.1.0"
description = "Minimal pybind11 hello world module built with CMake."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Example Author" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cibuildwheel>=3.3.1",
]

[tool.scikit-build]
minimum-version = "0.9"
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
wheel.packages = []
