[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.0", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "hello-cpp"
dynamic = ["version"]
description = "Minimal pybind11 hello world module built with CMake."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Example Author" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cibuildwheel>=3.3.1",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.9"
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
wheel.packages = []

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
hello-cpp = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "hello-cpp",
]
