[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.0", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "hello-cuda"
dynamic = ["version"]
description = "CUDA-enabled pybind11 hello world module built with CMake."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Example Author" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Programming Language :: CUDA",
  "License :: OSI Approved :: MIT License",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.9"
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
wheel.packages = []

# Configure setuptools_scm to find git root in parent directory
# Since we're building from linux-cuda/ subdirectory, git root is one level up
[tool.setuptools_scm]
root = ".."
